[package]
name = "moonar_lander"
version = "0.1.0"
authors = ["Paul Martensen <paul.martensen@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "*"
rand = "0.7.2"
legion = { git = "https://github.com/TomGillen/legion" }
nalgebra = "*"
